architecture-ide/tests/fixtures/negative/S4_where_var_not_bound.sync
sync Bad

  when
    Counter/inc: [ ] => [ ]
  where
    Counter: { ?mystery amount: ?amount }
  then
    Log/append: [ event: ?amount ]
